[gd_scene load_steps=2 format=3 uid="uid://blnkh5gxj1yaj"]

[ext_resource type="Script" path="res://UI/GamePauseUI.gd" id="2"]

[node name="GamePauseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.294118)

[node name="GamePausedLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -66.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -38.0
offset_right = 44.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -6.0
offset_right = 38.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
text = "Save"

[node name="RestartButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 26.0
offset_right = 39.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="ColorRect"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 58.0
offset_right = 38.0
offset_bottom = 81.0
text = "Quit"

[connection signal="pressed" from="ColorRect/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ColorRect/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ColorRect/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ColorRect/QuitButton" to="." method="_on_QuitButton_pressed"]
